included example html

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,10 +3,11 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Example</title>
+    <title> Cloud Computing Assignment</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../frontend/css/App.css">
 </head>
 <body>
-<h1>Example</h1>
 <div id="react-app"></div>
 {% render_bundle 'main' %}
 </body>
