--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title> Cloud Computing Assignment</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../frontend/css/App.css">
+    <link rel="stylesheet" href="css/App.css">
 </head>
 <body>
 <div id="react-app"></div>
