--- a/frontend/css/App.css
+++ b/frontend/css/App.css
@@ -18,6 +18,16 @@ body {
 .App .App-content {
   font-size: large;
 }
-.App .App-content .add-book-container {
-  margin: 15px 30%;
+.App .App-content .form-container{
+ margin-top: 100px;
+}
+.App .wellStyles {
+ max-width: 200px;
+ min-width: 150px;
+ margin: 0px;
+ margin-left: auto;
+ margin-right: auto;
+ padding: 25px;
+ margin-top: 30px;
+ font-size: 20px;
 }
