--- a/frontend/css/App.css
+++ b/frontend/css/App.css
@@ -17,17 +17,19 @@ body {
 }
 .App .App-content {
   font-size: large;
+  margin-bottom: 25px;
 }
 .App .App-content .form-container{
   margin-top: 100px;
 }
-.App .wellStyles {
-  max-width: 200px;
-  min-width: 150px;
-  margin: 0px;
+.App .alert-danger {
   margin-left: auto;
   margin-right: auto;
-  padding: 25px;
-  margin-top: 30px;
+  width: 480px;
+}
+.App .wellStyles {
+  max-width: 480px;
+  margin-left: auto;
+  margin-right: auto;
   font-size: 20px;
 }
